--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev -p 4444",
     "build": "next build && yarn next-sitemap",
     "start": "next start",
-    "export": "yarn build && next export",
+    "export": "NODE_OPTIONS=--openssl-legacy-provider yarn build && next export",
     "format": "eslint --fix src --ext .js,.jsx,.ts,.tsx",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
