--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev -p 4444",
     "build": "next build && yarn next-sitemap",
     "start": "next start",
-    "export": "NODE_OPTIONS=--openssl-legacy-provider yarn build && next export",
+    "export": "yarn build && next export",
     "format": "eslint --fix src --ext .js,.jsx,.ts,.tsx",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
@@ -27,7 +27,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "joi": "^17.4.2",
-    "next": "^11.1.0",
+    "next": "^12.3.0",
     "next-joi": "^2.2.1",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
