--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.1.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
