criacao de sections destaque, repertorios e artistas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
             ],
             "@public/*": [
                 "./public/*"
+            ],
+            "@components/*": [
+                "./src/components/*"
+            ],
+            "@sections/*": [
+                "./src/components/sections/*"
             ]
         }
     },
