--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
         "incremental": true,
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
+            "@styles/*": [
+                "./src/styles/*"
             ],
             "@public/*": [
                 "./public/*"
