criacao de stepper para criar repertorio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
             ],
             "@sections/*": [
                 "./src/components/sections/*"
+            ],
+            "@interfaces/*": [
+                "./src/core/interfaces/*"
             ]
         }
     },
