esconder o header quando scroll down

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
             ],
             "@services/*": [
                 "./src/core/services/*"
+            ],
+            "@hooks/*": [
+                "./src/core/hooks/*"
             ]
         }
     },
