--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next": "^13.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-error-boundary": "^4.0.11",
         "sass": "^1.62.0",
         "superagent": "^8.0.9",
         "typescript": "5.0.4"
