playlist do usuario

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-API=https://g1k8r5gt46.execute-api.us-east-1.amazonaws.com/prod/cc
+NEXT_PUBLIC_API=https://g1k8r5gt46.execute-api.us-east-1.amazonaws.com/prod/cc
